[project]
name = "unargsortable"
version = "0.0.0"
description = "Code for the unargsortable research project"
authors = [
    { name="Matthew Finlayson", email="mattbnfin@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "cvxpy",
    "torch",
    "transformers",
    "datasets",
    "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
